<resources>
    <string name="app_name">63-Kitchen-Gardening-Urdu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_course">Course</string>
    <string name="menu_plants_info">Plants Info</string>
    <string name="menu_gardening_tips">Gardening Tips</string>
    <string name="menu_share">Share</string>
    <string name="menu_about_us">About Us</string>
</resources>
