<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_kitchengardening_icon_svg_nobcg"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_plant_pot"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_plants_info"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_plants_info" />
        <item
            android:id="@+id/nav_gardening_tips"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_gardening_tips" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>
