<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.johnyhawkdesigns.a63_kitchen_gardening_urdu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.johnyhawkdesigns.a63_kitchen_gardening_urdu.ui.gallery.GalleryFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_plants_info"
        android:name="com.johnyhawkdesigns.a63_kitchen_gardening_urdu.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_plants_info"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_gardening_tips"
        android:name="com.johnyhawkdesigns.a63_kitchen_gardening_urdu.ui.tools.ToolsFragment"
        android:label="@string/menu_gardening_tips"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.johnyhawkdesigns.a63_kitchen_gardening_urdu.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/about_us"
        android:name="com.johnyhawkdesigns.a63_kitchen_gardening_urdu.ui.send.SendFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_send" />
</navigation>